test/users/vass/issue-16490-1.good
issue-16490-1.chpl:4: In function 'libFun':
issue-16490-1.chpl:5: error: cannot transfer ownership from a const variable
  issue-16490-1.chpl:8: called as libFun(myArg: owned MyClass?)
